--- a/index.html
+++ b/index.html
@@ -24,63 +24,107 @@
     <script defer src="/dist/script.js"></script>
   </head>
   <body>
-    About Discover Get Started Mastercraft Bamboo Monitor Riser A beautiful &
-    handcrafted monitor stand to reduce neck and eye strain. Back this project
-    Bookmark $89,914 of $100,000 backed 5,007 total backers 56 days left About
-    this project The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
-    platform that elevates your screen to a more comfortable viewing height.
-    Placing your monitor at eye level has the potential to improve your posture
-    and make you more comfortable while at work, helping you stay focused on the
-    task at hand. Featuring artisan craftsmanship, the simplicity of design
-    creates extra desk space below your computer to allow notepads, pens, and
-    USB sticks to be stored under the stand. Bamboo Stand Pledge $25 or more You
-    get an ergonomic stand made of natural bamboo. You've helped us launch our
-    promotional campaign, and you’ll be added to a special Backer member list.
-    101 left Select Reward Black Edition Stand Pledge $75 or more You get a
-    Black Special Edition computer stand and a personal thank you. You’ll be
-    added to our Backer member list. Shipping is included. 64 left Select Reward
-    Mahogany Special Edition Pledge $200 or more You get two Special Edition
-    Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-    to our Backer member list. Shipping is included. 0 left Out of Stock
+    <nav>
+      <a href=""><img src="images/logo.svg" alt="Logo" /></a>
+      <div class="nav__wrapper">
+        <ul>
+          <li><a href="#" class="nav__item">About</a></li>
+          <li><a href="#" class="nav__item">Discover</a></li>
+          <li><a href="#" class="nav__item">Get Started</a></li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <section class="starter">
+        <img src="images/logo-mastercraft.svg" alt="" />
+        <h2>Mastercraft Bamboo Monitor Riser</h2>
+        <p>
+          A beautiful & handcrafted monitor stand to reduce neck and eye strain.
+        </p>
+        <button class="button">Back this project</button>
+        <button class="bookmark">
+          <img src="images/icon-bookmark.svg" alt="" />
+          Bookmark
+        </button>
+      </section>
+      <section class="stats">
+        <div class="stats_container">
+          <h2>$89,914</h2>
+          <p>of $100,000 backed</p>
+        </div>
+        <div class="stats_container">
+          <h2>5,007</h2>
+          <p>total backers</p>
+        </div>
+        <div class="stats_container">
+          <h2>56</h2>
+          <p>days left</p>
+        </div>
+        <div class="stats-bar">
+          <div class="inner-bar"></div>
+        </div>
+      </section>
+      <section class="about">
+        <h3>About</h3>
+        <p>
+          The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform
+          that elevates your screen to a more comfortable viewing height.
+          Placing your monitor at eye level has the potential to improve your
+          posture and make you more comfortable while at work, helping you stay
+          focused on the task at hand.
+        </p>
+        <p>
+          Featuring artisan craftsmanship, the simplicity of design creates
+          extra desk space below your computerto allow notepads, pens, and USB
+          sticks to be stored under the stand.
+        </p>
 
-    <!-- Selection modal start -->
-
-    Back this project Want to support us in bringing Mastercraft Bamboo Monitor
-    Riser out in the world? Pledge with no reward Choose to support us without a
-    reward if you simply believe in our project. As a backer, you will be signed
-    up to receive product updates via email. Bamboo Stand Pledge $25 or more You
-    get an ergonomic stand made of natural bamboo. You've helped us launch our
-    promotional campaign, and you’ll be added to a special Backer member list.
-    101 left
-
-    <!-- Selected pledge start -->
-    Enter your pledge $25 Continue
-    <!-- Selected pledge end -->
-
-    Black Edition Stand Pledge $75 or more You get a Black Special Edition
-    computer stand and a personal thank you. You’ll be added to our Backer
-    member list. Shipping is included. 64 left
-
-    <!-- Selected pledge start -->
-    Enter your pledge $75 Continue
-    <!-- Selected pledge end -->
-
-    Mahogany Special Edition Pledge $200 or more You get two Special Edition
-    Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-    to our Backer member list. Shipping is included. 0 left
-
-    <!-- Selected pledge  start -->
-    Enter your pledge $200 Continue
-    <!-- Selected pledge end -->
-
-    <!-- Selection modal end -->
-
-    <!-- Success modal start -->
-
-    Thanks for your support! Your pledge brings us one step closer to sharing
-    Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our
-    campaign is completed. Got it!
-
-    <!-- Success modal end -->
+        <div class="card">
+          <div class="headline">
+            <h3>Bamboo Stand</h3>
+            <p class="pledge">Pledge $25 or more</p>
+          </div>
+          <p>
+            You get an ergonomic stand made of natural bamboo. You've helped us
+            launch our promotional campaign, and you’ll be added to a special
+            Backer member list.
+          </p>
+          <div class="footer">
+            <p class="numbers-left">101<span class="smaller">left</span></p>
+            <button class="button-smaller">Select Reward</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="headline">
+            <h3>Black Edition Stand</h3>
+            <p class="pledge">Pledge $75 or more</p>
+          </div>
+          <p>
+            You get a Black Special Edition computer stand and a personal thank
+            you. You’ll be added to our Backer member list. Shipping is
+            included.
+          </p>
+          <div class="footer">
+            <p class="numbers-left">64<span class="smaller">left</span></p>
+            <button class="button-smaller">Select Reward</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="headline">
+            <h3>Mahogany Special Edition</h3>
+            <p class="pledge">Pledge $200 or more</p>
+          </div>
+          <p>
+            You get two Special Edition Mahogany stands, a Backer T-Shirt, and a
+            personal thank you. You’ll be added to our Backer member list.
+            Shipping is included.
+          </p>
+          <div class="footer">
+            <p class="numbers-left">0<span class="smaller">left</span></p>
+            <button class="button-gray">Out of Stock</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
