--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   </head>
   <body>
     <nav>
-      <a href=""><img src="images/logo.svg" alt="Logo" /></a>
-      <div class="nav__wrapper">
-        <ul>
+      <div class="nav__container">
+        <a href=""><img src="images/logo.svg" alt="Logo" /></a>
+        <ul class="options__container">
           <li><a href="#" class="nav__item">About</a></li>
           <li><a href="#" class="nav__item">Discover</a></li>
           <li><a href="#" class="nav__item">Get Started</a></li>
