Styled the starter card

--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
     </nav>
     <main>
       <section class="starter">
-        <img src="images/logo-mastercraft.svg" alt="" />
+        <img src="images/logo-mastercraft.svg" alt="" class="logo" />
         <h2>Mastercraft Bamboo Monitor Riser</h2>
         <p>
           A beautiful & handcrafted monitor stand to reduce neck and eye strain.
         </p>
-        <button class="button">Back this project</button>
-        <button class="bookmark">
-          <img src="images/icon-bookmark.svg" alt="" />
-          Bookmark
+        <div>
+          <button class="button">Back this project</button>
+          <button class="bookmark"><img src="images/icon-bookmark.svg" alt="" />
+            Bookmark</button>
+        </div>
         </button>
       </section>
       <section class="stats">
