Styled the statistics card

--- a/index.html
+++ b/index.html
@@ -49,17 +49,19 @@
         </button>
       </section>
       <section class="stats">
-        <div class="stats_container">
-          <h2>$89,914</h2>
-          <p>of $100,000 backed</p>
-        </div>
-        <div class="stats_container">
-          <h2>5,007</h2>
-          <p>total backers</p>
-        </div>
-        <div class="stats_container">
-          <h2>56</h2>
-          <p>days left</p>
+        <div class="all_stats_container">
+          <div class="stats_container">
+            <h2>$89,914</h2>
+            <p>of $100,000 backed</p>
+          </div>
+          <div class="stats_container">
+            <h2>5,007</h2>
+            <p>total backers</p>
+          </div>
+          <div class="stats_container">
+            <h2>56</h2>
+            <p>days left</p>
+          </div>
         </div>
         <div class="stats-bar">
           <div class="inner-bar"></div>
