Styled the about section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </section>
       <section class="about">
-        <h3>About</h3>
+        <h3>About this project</h3>
         <p>
           The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform
           that elevates your screen to a more comfortable viewing height.
@@ -93,7 +93,10 @@
             Backer member list.
           </p>
           <div class="footer">
-            <p class="numbers-left">101<span class="smaller">left</span></p>
+            <div class="p-container">
+              <p class="numbers-left">101 </p>
+              <p class="smaller">left</p>
+            </div>
             <button class="button-smaller">Select Reward</button>
           </div>
         </div>
@@ -108,11 +111,14 @@
             included.
           </p>
           <div class="footer">
-            <p class="numbers-left">64<span class="smaller">left</span></p>
+            <div class="p-container">
+              <p class="numbers-left">64</p>
+              <p class="smaller">left</p>
+            </div>
             <button class="button-smaller">Select Reward</button>
           </div>
         </div>
-        <div class="card">
+        <div class="card last">
           <div class="headline">
             <h3>Mahogany Special Edition</h3>
             <p class="pledge">Pledge $200 or more</p>
@@ -123,7 +129,10 @@
             Shipping is included.
           </p>
           <div class="footer">
-            <p class="numbers-left">0<span class="smaller">left</span></p>
+            <div class="p-container">
+              <p class="numbers-left">0 </p>
+              <p class="smaller">left</p>
+            </div>
             <button class="button-gray">Out of Stock</button>
           </div>
         </div>
