Added close-open popup functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script defer src="/dist/script.js"></script>
   </head>
   <body>
-    <div class="transparent-background"></div>
+    <div class="transparent-background close"></div>
     <nav>
       <div class="nav__container">
         <a href=""><img src="images/logo.svg" alt="Logo" /></a>
@@ -98,7 +98,9 @@
               <p class="numbers-left">101</p>
               <p class="smaller">left</p>
             </div>
-            <button class="button-smaller">Select Reward</button>
+            <button class="button-smaller open-popup-with-option">
+              Select Reward
+            </button>
           </div>
         </div>
         <div class="card">
@@ -116,7 +118,9 @@
               <p class="numbers-left">64</p>
               <p class="smaller">left</p>
             </div>
-            <button class="button-smaller">Select Reward</button>
+            <button class="button-smaller open-popup-with-option">
+              Select Reward
+            </button>
           </div>
         </div>
         <div class="card last">
@@ -134,13 +138,15 @@
               <p class="numbers-left">0</p>
               <p class="smaller">left</p>
             </div>
-            <button class="button-gray">Out of Stock</button>
+            <button class="button-gray open-popup-with-option">
+              Out of Stock
+            </button>
           </div>
         </div>
       </section>
     </main>
 
-    <div class="back-project-popup">
+    <div class="back-project-popup close">
       <div class="close-popup"></div>
       <form action="">
         <h3>Back this project</h3>
