Fixed some bugs with the popup

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
             </div>
 
             <div>
-              <label for="no-reward">Pledge with no reward</label>
+              <label for="no-reward" class="reward-label"
+                >Pledge with no reward</label
+              >
               <p>
                 Choose to support us without a reward if you simply believe in
                 our project. As a backer, you will be signed up to receive
@@ -207,7 +209,7 @@
             </div>
 
             <div>
-              <label for="bamboo-stand"
+              <label for="bamboo-stand" class="reward-label"
                 >Bamboo Stand
                 <span class="always-cyan">Pledge 25$ or more</span></label
               >
@@ -251,7 +253,7 @@
             </div>
 
             <div>
-              <label for="black-stand"
+              <label for="black-stand" class="reward-label"
                 >Black Edition Stand
                 <span class="always-cyan">Pledge 75$ or more</span></label
               >
@@ -294,7 +296,7 @@
             </div>
 
             <div>
-              <label for="special-edition"
+              <label for="special-edition" class="reward-label"
                 >Mahogany Special Edition
                 <span class="always-cyan">Pledge 200$ or more</span></label
               >
