Added functionality to the continue button and the bar

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <section class="stats">
         <div class="all_stats_container">
           <div class="stats_container">
-            <h2>$89,914</h2>
+            <h2 id="money">$89,914</h2>
             <p>of $100,000 backed</p>
           </div>
           <div class="stats_container">
-            <h2>5,007</h2>
+            <h2 id="backers">5,007</h2>
             <p>total backers</p>
           </div>
           <div class="stats_container">
@@ -95,7 +95,7 @@
           </p>
           <div class="footer">
             <div class="p-container">
-              <p class="numbers-left">101</p>
+              <p class="numbers-left bamboo">101</p>
               <p class="smaller">left</p>
             </div>
             <button class="button-smaller open-popup-with-option">
@@ -115,7 +115,7 @@
           </p>
           <div class="footer">
             <div class="p-container">
-              <p class="numbers-left">64</p>
+              <p class="numbers-left black">64</p>
               <p class="smaller">left</p>
             </div>
             <button class="button-smaller open-popup-with-option">
@@ -135,7 +135,7 @@
           </p>
           <div class="footer">
             <div class="p-container">
-              <p class="numbers-left">0</p>
+              <p class="numbers-left mahogany">0</p>
               <p class="smaller">left</p>
             </div>
             <button class="button-gray open-popup-with-option">
@@ -188,13 +188,14 @@
                 /></label>
                 <input type="text" name="pledge-amount" class="pledge-input" />
               </div>
-              <button class="button-smaller">Continue</button>
+              <button class="button-smaller" type="button">Continue</button>
             </div>
           </div>
         </div>
         <div class="card-reward card">
           <p class="pledges-left">
-            <span class="bold">101</span> <span class="opacity">left</span>
+            <span class="bold bamboo">101</span>
+            <span class="opacity">left</span>
           </p>
 
           <div class="flex">
@@ -232,7 +233,7 @@
                 /></label>
                 <input type="text" name="pledge-amount" class="pledge-input" />
               </div>
-              <button class="button-smaller">Continue</button>
+              <button class="button-smaller" type="button">Continue</button>
             </div>
           </div>
         </div>
@@ -240,7 +241,8 @@
         <div class="card-reward card">
           <div class="flex">
             <p class="pledges-left">
-              <span class="bold">64</span> <span class="opacity">left</span>
+              <span class="bold black">64</span>
+              <span class="opacity">left</span>
             </p>
             <div class="radio-container">
               <input
@@ -276,14 +278,15 @@
                 /></label>
                 <input type="text" name="pledge-amount" class="pledge-input" />
               </div>
-              <button class="button-smaller">Continue</button>
+              <button class="button-smaller" type="button">Continue</button>
             </div>
           </div>
         </div>
         <div class="card-reward card">
           <div class="flex">
             <p class="pledges-left">
-              <span class="bold">0</span> <span class="opacity">left</span>
+              <span class="bold mahogany">0</span>
+              <span class="opacity">left</span>
             </p>
             <div class="radio-container">
               <input
@@ -319,7 +322,7 @@
                 /></label>
                 <input type="text" name="pledge-amount" class="pledge-input" />
               </div>
-              <button class="button-smaller">Continue</button>
+              <button class="button-smaller" type="button">Continue</button>
             </div>
           </div>
         </div>
