Added functionality to the number of products left and made gray the ones that are unavailable

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </button>
           </div>
         </div>
-        <div class="card last">
+        <div class="card">
           <div class="headline">
             <h3>Mahogany Special Edition</h3>
             <p class="pledge">Pledge $200 or more</p>
@@ -138,8 +138,8 @@
               <p class="numbers-left mahogany">0</p>
               <p class="smaller">left</p>
             </div>
-            <button class="button-gray open-popup-with-option">
-              Out of Stock
+            <button class="button-smaller open-popup-with-option">
+              Select Reward
             </button>
           </div>
         </div>
@@ -162,6 +162,7 @@
                 name="pledge-options"
                 value="no-reward"
                 id="no-reward"
+                class="radio"
               />
             </div>
 
@@ -205,7 +206,7 @@
                 name="pledge-options"
                 value="bamboo-stand"
                 id="bamboo-stand"
-                class="reward"
+                class="reward radio"
               />
             </div>
 
@@ -250,7 +251,7 @@
                 name="pledge-options"
                 value="black-stand"
                 id="black-stand"
-                class="reward"
+                class="reward radio"
               />
             </div>
 
@@ -294,7 +295,7 @@
                 name="pledge-options"
                 value="special-edition"
                 id="special-edition"
-                class="reward"
+                class="reward radio"
               />
             </div>
 
