Added modal completed message

--- a/index.html
+++ b/index.html
@@ -329,5 +329,16 @@
         </div>
       </form>
     </div>
+
+    <div class="modal-completed close">
+      <img src="images/icon-check.svg" alt="" />
+      <h2>Thanks for your support!</h2>
+      <p>
+        Your pledge brings us one step closer to sharing Mastercraft Bamboo
+        Monitor Riser worldwide. You will get an email once our campaign is
+        completed.
+      </p>
+      <button class="button-smaller close-modal">Got it!</button>
+    </div>
   </body>
 </html>
