Fixed github page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/style.css" />
-    <script defer src="/dist/script.js"></script>
+    <link rel="stylesheet" href="dist/style.css" />
+    <script defer src="dist/script.js"></script>
   </head>
   <body>
     <div class="transparent-background close"></div>
